@@ -76,16 +76,26 @@ func (c *pingSourcesClient) CreatePingSource(pingsource *v1alpha2.PingSource) er
 		return fmt.Errorf("a sink is required for creating a source")
 	}
 	_, err := c.client.Create(context.TODO(), pingsource, metav1.CreateOptions{})
-	return err
+	if err != nil {
+		return knerrors.GetError(err)
+	}
+	return nil
 }
 
 func (c *pingSourcesClient) UpdatePingSource(pingSource *v1alpha2.PingSource) error {
 	_, err := c.client.Update(context.TODO(), pingSource, metav1.UpdateOptions{})
-	return err
+	if err != nil {
+		return knerrors.GetError(err)
+	}
+	return nil
 }
 
 func (c *pingSourcesClient) DeletePingSource(name string) error {
-	return c.client.Delete(context.TODO(), name, metav1.DeleteOptions{})
+	err := c.client.Delete(context.TODO(), name, metav1.DeleteOptions{})
+	if err != nil {
+		return knerrors.GetError(err)
+	}
+	return nil
 }
 
 func (c *pingSourcesClient) GetPingSource(name string) (*v1alpha2.PingSource, error) {
@@ -104,7 +114,7 @@ func (c *pingSourcesClient) GetPingSource(name string) (*v1alpha2.PingSource, er
 func (c *pingSourcesClient) ListPingSource() (*v1alpha2.PingSourceList, error) {
 	sourceList, err := c.client.List(context.TODO(), metav1.ListOptions{})
 	if err != nil {
-		return nil, err
+		return nil, knerrors.GetError(err)
 	}
 
 	return updatePingSourceListGVK(sourceList)
